# data_science_explorer

./: -TFGELSOS3516775.gitignore  .gitignore  README.md  django_start.code-workspace  docker-compose.yml
docker/web/: Dockerfile  entrypoint.sh  jupyterlab.sh  manage.py  pyproject.toml  requirements.txt  secret_endpoints_example.py
docker/web/base/: RedisDB.py  admin.py  asgi.py  context_processors.py  helpers.py  plotly_helpers.py  redis_db.py  urls.py
docker/web/base/css/: site.css  site.css.map  site.scss
docker/web/base/migrations/: 0001_initial.py  0002_auto_20210912_2021.py  0003_alter_dataset_delimiter.py  0004_alter_dataset_delimiter.py
docker/web/base/models/: ResultMixin.py  analysis.py  dataset.py
docker/web/base/settings/: .env  base.py  docker.py  local.py
docker/web/base/templates/base/: base.html  check.html  dataset_create.html  dataset_list.html  dataset_view.html  index.html  model_add.html  model_detail.html
docker/web/base/templatetags/: base_tags.py
docker/web/base/views/: __init__.py  ajax.py  check.py  common.py  dataset.py  papermill.py
docker/web/notebooks/: Untitled.ipynb  django_test.ipynb  minio.ipynb  mitosheet.ipynb  new.ipynb  pymc3.ipynb  test.ipynb
docker/web/notebooks/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers-master/Chapter1_Introduction/: Ch1_Introduction_PyMC3.ipynb  Ch1_Introduction_Pyro.ipynb  Ch1_Introduction_TFP.ipynb
docker/web/notebooks/bodhi/: BaysianMediaAttribution.ipynb  Breeo MMM Thursday Fun - data.csv  bodhi.ipynb  data.csv  data_percent.csv
docker/web/regression/: admin.py  urls.py
docker/web/regression/models/: regression.py
docker/web/regression/views/: regression.py
docker/web/web_site/: asgi.py  urls.py  wsgi.py
(+22 files in other folders)
