[tool.poetry]
name = "django_start"
version = "0.1.0"
description = "A starting Django project environment"
authors = ["Stephen Kelley <stevek@virtustate.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3"
django = "*"
numpy = "*"
pandas = "*"
psycopg2 = "*"
scikit-learn = "*"
django_redis = "*"
snowflake_sqlalchemy = "*"
matplotlib = "*"
plotly = "*"
django-bootstrap-breadcrumbs = "*"
django_bootstrap4 = "*"
django_sass_processor = "*"
django_analytical = "*"
django_fontawesome_5 = "*"
django_libsass = "*"
django_environ = "*"
django_extensions = "*"
jupyterlab = "*"
vega = "*"
papermill = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
# black = "*"
pylint = "*"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
